# black-midi2cv

./: .gitignore  .gitmodules  CMakeLists.txt  license.md
app/: app.cpp  app.h
app/core/: core.cpp  core.h
app/hal/: hal-adc.cpp  hal-adc.h  hal-gpio-interrupt.cpp  hal-gpio.cpp  hal-gpio.h  hal-resources.cpp  hal-resources.h  hal-timer.cpp  hal-uart-interrupt.cpp  hal-uart.cpp  hal-uart.h  hal.cpp  hal.h  hal_adc.cpp  hal_adc.h  hal_flash.cpp  hal_flash.h  hal_gpio.cpp  hal_gpio.h  hal_gpio_interrupt.cpp  hal_gpio_interrupts.cpp  hal_systick.cpp  hal_systick.h  hal_timer.cpp  hal_timer.h  hal_uart.cpp  hal_uart.h  hal_uart_interrupt.cpp  helper.cpp  helper.h
app/hl-hal/: dac.h
app/hl_hal/: dac.h  debug.cpp  debug.h  settings.cpp  settings.h  usb_midi.cpp  usb_midi.h
app/midi/: midi-config.h  midi-message.h  midi-parser.cpp  midi-parser.h  midi-usb-message.h  midi_helpers.cpp  midi_helpers.h  midi_usb_message.cpp  midi_usb_message.h
app/sysex/: sysex_protocol.cpp  sysex_protocol.h
app/voice/: voice.h
lib/usb_midi_device/: usbd_midi.c  usbd_midi.h  usbd_midi_if.c  usbd_midi_if.h
lib/usb_midi_host/: usbh_MIDI.c  usbh_MIDI.h
tests/: test_voltage.py
